@@ -5,38 +5,47 @@
  //       adam b (gdrago23@yahoo.com)
  // lic : GPL, v2
 
- $record_name = "Authorizations";
- $page_name   = "authorizations.php";
- $db_name     = "authorizations";
- include ("lib/freemed.php");
- include ("lib/API.php");
+if (!defined("__AUTHORIZATIONS_MODULE_PHP__")) {
 
- freemed_open_db ($LoginCookie); // authenticate
- freemed_display_html_top ();
- freemed_display_banner ();
+define (__AUTHORIZATIONS_MODULE_PHP__, true);
 
- if ($patient<1) {
-   freemed_display_box_top (_($record_name)." :: "._("ERROR"));
-   echo "
-     <$HEADERFONT_B>"._("You must select a patient.")."<$HEADERFONT_E>
-   ";
-   freemed_display_box_bottom ();
-   freemed_close_db ();
-   freemed_display_html_bottom ();
-   DIE(""); // go on to a better place
- }
+include ("lib/module_emr.php");
 
- switch ($action) { // master action switch
-   case "addform":
-   case "modform":
+class authorizationsModule extends freemedEMRModule {
+
+	var $MODULE_NAME    = "Authorizations";
+	var $MODULE_VERSION = "0.1";
+
+	var $record_name    = "Authorizations";
+	var $table_name     = "authorizations";
+
+	var $variables = array (
+		"authdtmod",
+		"authdtbegin",
+		"authdtend",
+		"authnum",
+		"authtype",
+		"authprov",
+		"authprovid",
+		"authinsco",
+		"authvisits",
+		"authcomment"
+	);
+
+	function authorizationsModule () {
+		$this->freemedEMRModule();
+	} // end constructor authorizationsModule
+
+	function form () {
+		reset($GLOBALS);
+		while(list($k,$v)=each($GLOBALS)) global $$k;
+
      switch ($action) { // internal action switch
       case "addform":
        // do nothing
        break; // end internal addform
       case "modform":
        if (($patient<1) OR (empty($patient))) {
-         freemed_display_box_top (_("$record_name")." :: "._("ERROR"),
-	   $page_name, "$page_name?patient=$patient");
          echo "
            <$HEADERFONT_B>"._("You must select a patient.")."<$HEADERFONT_E>
          ";
@@ -47,21 +56,18 @@
        extract ($r);
        break; // end internal modform
      } // end internal action switch
-     freemed_display_box_top (($action=="addform" ? _("Add") : _("Modify")).
-       " "._("$record_name"), $page_name,
-       "manage.php?id=$patient");
+
      $pnotesdt     = $cur_date;
 
-     $this_patient = new Patient ($patient);
-
-     echo freemed_patient_box($this_patient)."
+     echo "
        <P>
 
-       <FORM ACTION=\"$page_name\" METHOD=POST>
+       <FORM ACTION=\"$this->page_name\" METHOD=POST>
        <INPUT TYPE=HIDDEN NAME=\"action\"  VALUE=\"".
          ( ($action=="addform") ? "add" : "mod" )."\">
        <INPUT TYPE=HIDDEN NAME=\"id\"      VALUE=\"".prepare($id)."\">
        <INPUT TYPE=HIDDEN NAME=\"patient\" VALUE=\"".prepare($patient)."\">
+       <INPUT TYPE=HIDDEN NAME=\"module\"  VALUE=\"".prepare($module)."\">
 
        <TABLE BORDER=0 CELLSPACING=0 CELLPADDING=3
         VALIGN=MIDDLE ALIGN=CENTER>
@@ -189,114 +195,51 @@
        </FORM>
 
        <CENTER>
-        <A HREF=\"$page_name?$_auth&patient=$patient\"
+        <A HREF=\"$this->page_name?$_auth&module=$module&patient=$patient\"
          ><$STDFONT_B>". 
 	  ( ($action=="addform") ? _("Abandon Addition") :
 	    _("Abandon Modification") )."<$STDFONT_E></A>
        </CENTER>
      ";
-     freemed_display_box_bottom ();
-     break;
+	} // end function authorizationsModule->form()
 
-   case "add":
-     freemed_display_box_top (_("Adding")." "._("$record_name"), $page_name, 
-       "manage.php?id=$patient");
-     echo "
-       <CENTER><$STDFONT_B><B>".("Adding")." . . . </B>
-     ";
+	function add () {
+		reset ($GLOBALS);
+		while(list($k,$v)=each($GLOBALS)) global $$k;
+		$authdtbegin = fm_date_assemble("authdtbegin");
+		$authdtend   = fm_date_assemble("authdtend");
+		$authdtmod    = $cur_date;
+		$this->_add();
+	} // end function authorizationsModule->add()
 
-       // actual addition
-     $query = "INSERT INTO $db_name VALUES (
-       '$cur_date',
-       '0000-00-00',
-       '".addslashes($patient)             ."',
-       '".fm_date_assemble("authdtbegin")  ."',
-       '".fm_date_assemble("authdtend")    ."',
-       '".addslashes($authnum)             ."',
-       '".addslashes($authtype)            ."',
-       '".addslashes($authprov)            ."',
-       '".addslashes($authprovid)          ."',
-       '".addslashes($authinsco)           ."',
-       '".addslashes($authvisits)          ."',
-       '0',
-       '0',
-       '".addslashes($authcomment)         ."',
-       NULL ) "; // actual add query
-     $result = $sql->query ($query);
-     if ($result)
-       echo " <B> "._("done")." </B>\n";
-     else
-       echo " <B> <FONT COLOR=\"#ff0000\">"._("ERROR")."</FONT> </B>\n";
-     echo "
-       <$STDFONT_E></CENTER>
-       <BR><BR>
-       <CENTER><A HREF=\"manage.php?$_auth&id=$patient\"
-        ><$STDFONT_B>"._("Manage Patient")."<$STDFONT_E></A>
-       <B>|</B>
-       <A HREF=\"$page_name?$_auth&patient=$patient\"
-        ><$STDFONT_B>"._("$record_name")."<$STDFONT_E></A>
-       </CENTER>
-       <BR>
-     ";
-     freemed_display_box_bottom ();
-     break;
+	function mod () {
+		reset ($GLOBALS);
+		while(list($k,$v)=each($GLOBALS)) global $$k;
+		$authdtbegin = fm_date_assemble("authdtbegin");
+		$authdtend   = fm_date_assemble("authdtend");
+		$authdtmod    = $cur_date;
+		$this->_mod();
+	} // end function authorizationsModule->mod()
 
-   case "mod":
-     freemed_display_box_top (_("Modifying")." "._("$record_name"));
-     echo "<B><$STDFONT_B>"._("Modifying")." . . . <$STDFONT_E></B>\n";
-     $query = "UPDATE $db_name SET
-       authdtmod      = '$cur_date',
-       authdtbegin    = '".fm_date_assemble("authdtbegin")."',
-       authdtend      = '".fm_date_assemble("authdtend")  ."',
-       authnum        = '".addslashes($authnum)           ."',
-       authtype       = '".addslashes($authtype)          ."',
-       authprov       = '".addslashes($authprov)          ."',
-       authprovid     = '".addslashes($authprovid)        ."',
-       authinsco      = '".addslashes($authinsco)         ."',
-       authvisits     = '".addslashes($authvisits)        ."',
-       authcomment    = '".addslashes($authcomment)       ."'
-       WHERE id='$id'";
-     $result = $sql->query ($query);
-     if ($result) echo "<B><$STDFONT_B>"._("done")."<$STDFONT_E></B>\n";
-      else echo "<B><$STDFONT_B>"._("ERROR")."<$STDFONT_E></B>\n";
-     echo "
-       <P>
-       <CENTER>
-        <A HREF=\"manage.php?$_auth&id=$patient\"
-         ><$STDFONT_B>"._("Manage Patient")."<$STDFONT_E></A>
-        <B>|</B>
-        <A HREF=\"$page_name?$_auth&patient=$patient\"
-         ><$STDFONT_B>"._("View/Modify")." "._("$record_name")."<$STDFONT_E></A>
-        <BR>
-        <A HREF=\"$page_name?$_auth&patient=$patient&action=addform\"
-         ><$STDFONT_B>"._("Add")." "._("$record_name")."<$STDFONT_E></A>
-       </CENTER>
-     ";
-     freemed_display_box_bottom ();
-     break;
+	function view () {
+		reset ($GLOBALS);
+		while(list($k,$v)=each($GLOBALS)) global $$k;
 
-   default:
-     // in case of emergency, break glass -- default shows all things from
-     // specified patient...
-
-     $query = "SELECT * FROM $db_name
+     $query = "SELECT * FROM $this->table_name
         WHERE (authpatient='".addslashes($patient)."')
         ORDER BY authdtbegin,authdtend";
      $result = $sql->query ($query);
      $rows = ( ($result > 0) ? $sql->num_rows ($result) : 0 );
 
-     $this_patient = new Patient ($patient);
-     
      if ($rows < 1) {
-       freemed_display_box_top (_($record_name));
-       echo freemed_patient_box($this_patient)."
+       echo "
          <P>
          <CENTER>
          <$STDFONT_B>"._("This patient has no authorizations.")."<$STDFONT_E>
          </CENTER>
          <P>
          <CENTER>
-         <A HREF=\"$page_name?$_auth&action=addform&patient=$patient\"
+         <A HREF=\"$this->page_name?$_auth&action=addform&module=$module&patient=$patient\"
           ><$STDFONT_B>"._("Add")." "._("$record_name")."<$STDFONT_E></A>
          <B>|</B>
          <A HREF=\"manage.php?$_auth&id=$patient\"
@@ -311,15 +254,12 @@
      } // if there are none...
 
        // or else, display them...
-     freemed_display_box_top (_($record_name),
-      "manage.php?id=$patient");
-     $this_patient = new Patient ($patient);
-     echo freemed_patient_box($this_patient)."
+     echo "
        <P>
      ".
      freemed_display_itemlist (
        $result,
-       $page_name,
+       $this->page_name,
        array (
          "Dates" => "authdtbegin",
 	 "<FONT COLOR=\"#000000\">_</FONT>" => 
@@ -328,11 +268,12 @@
        ),
        array ("", "/", "")
      );
-     freemed_display_box_bottom ();
-     break;
- } // end master action switch
+	} // end function authorizationsModule->view()
 
- freemed_close_db ();
- freemed_display_html_bottom ();
+} // end class authorizationsModule
+
+register_module ("authorizationsModule");
+
+} // end if defined
 
 ?>
